--- a/css/utils/animations.css
+++ b/css/utils/animations.css
@@ -203,21 +203,6 @@ html.scrolling-in-progress .header-content * {
   }
 }
 
-@keyframes subtle-pulse {
-  0% {
-    transform: scale(1);
-  }
-  40% {
-    transform: scale(1.03);
-  }
-  60% {
-    transform: scale(1.03);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
-
 @keyframes checkmark-pulse {
   0% {
     transform: scale(1);
